--- a/pages/css/hashtags.css
+++ b/pages/css/hashtags.css
@@ -31,29 +31,40 @@ div.hashtag-header label.media-count {
 
 .top {
    opacity: 0;
-   padding-left: 20px;
+   text-align: center;
 }
 
 .middle {
+    width: 100%;
     text-align: center;
 }
 
-.middle img {
-    margin-top: 2px;
-    border: solid 2px #aaa;
-    vertical-align: middle;
-    width: 125px;
-    height: 125px;
+.middle a {
+    position:relative;
+    display:block;
+    
+    width:125px;
+    height:125px;
+    
+    margin-left: 20px;
+
+}
+
+.middle img.media {
+    width:125px;
+    height:125px;
+}
+
+.middle span {
+    position:absolute;
+    left:8px;
+    top:8px;
 }
 
 img.video-img {
-    position: relative;
-    vertical-align: top;
-    right: 20px;
-    top: 10px;
-    width: 16px;
-    height: 16px;
-    z-index: 300;
+    width:16px;
+    height:16px;
+    opacity: 0.6;
 }
 
 .bottom {
@@ -66,6 +77,7 @@ img.video-img {
     padding-right: 2px;
     width: 12px;
     height: 12px;
+    opacity: 0.4;
 }
 
 .bottom img:nth-of-type(2) {
