--- a/pages/css/profile.css
+++ b/pages/css/profile.css
@@ -82,22 +82,33 @@
     text-align: center;
 }
 
-.middle img {
-    margin-top: 2px;
-    border: solid 2px #aaa;
-    vertical-align: middle;
-    width: 125px;
-    height: 125px;
+.middle a {
+    position:relative;
+    display:block;
+    
+    width:125px;
+    height:125px;
+    
+    margin-left: 20px;
+
+}
+
+
+.middle img.media {
+    width:125px;
+    height:125px;
+}
+
+.middle span {
+    position:absolute;
+    left:8px;
+    top:8px;
 }
 
 img.video-img {
-    position: relative;
-    vertical-align: top;
-    right: 20px;
-    top: 10px;
-    width: 16px;
-    height: 16px;
-    z-index: 300;
+    width:16px;
+    height:16px;
+    opacity: 0.4;
 }
 
 .bottom {
